opam-version: "2.0"
version: "2.2.0~alpha~dev"
synopsis: "Bootstrapped development binary for opam 2.1"
description: """
This package compiles (bootstraps) opam. For consistency and safety of the installation, the binaries are not installed into the PATH, but into lib/opam-devel, from where the user can manually install them system-wide.
"""
maintainer: "opam-devel@lists.ocaml.org"
authors: [
  "Vincent Bernardoff <vb@luminar.eu.org>"
  "Raja Boujbel <raja.boujbel@ocamlpro.com>"
  "Roberto Di Cosmo <roberto@dicosmo.org>"
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
  "Fabrice Le Fessant <Fabrice.Le_fessant@inria.fr>"
  "Anil Madhavapeddy <anil@recoil.org>"
  "Guillem Rieu <guillem.rieu@ocamlpro.com>"
  "Ralf Treinen <ralf.treinen@pps.jussieu.fr>"
  "Frederic Tuong <tuong@users.gforge.inria.fr>"
]
homepage: "https://opam.ocaml.org"
bug-reports: "https://github.com/ocaml/opam/issues"
dev-repo: "git+https://github.com/ocaml/opam.git"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
build: [
  ["./configure" "--disable-checks" "--prefix" prefix]
  [make "%{name}%.install"]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "opam-client" {= version}
  "cmdliner" {>= "1.1.0"}
  "dune" {>= "2.0.0"}
  "conf-openssl" {with-test}
  "conf-diffutils" {with-test}
]
post-messages: [
"The development version of opam has been successfully compiled into %{lib}%/%{name}%. You should not run it from there, please install the binaries to your PATH, e.g. with
    sudo cp %{lib}%/%{name}%/opam /usr/local/bin

If you just want to give it a try without altering your current installation, you could use instead:
    alias opam2=\"OPAMROOT=~/.opam2 %{lib}%/%{name}%/opam\""
  {success}
]
