opam-version: "1.2"
version: "2.0.1"
maintainer: "opam-devel@lists.ocaml.org"
authors: [
  "Vincent Bernardoff <vb@luminar.eu.org>"
  "Raja Boujbel <raja.boujbel@ocamlpro.com>"
  "Roberto Di Cosmo <roberto@dicosmo.org>"
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
  "Fabrice Le Fessant <Fabrice.Le_fessant@inria.fr>"
  "Anil Madhavapeddy <anil@recoil.org>"
  "Guillem Rieu <guillem.rieu@ocamlpro.com>"
  "Ralf Treinen <ralf.treinen@pps.jussieu.fr>"
  "Frederic Tuong <tuong@users.gforge.inria.fr>"
]
homepage: "https://opam.ocaml.org/"
bug-reports: "https://github.com/ocaml/opam/issues"
dev-repo: "https://github.com/ocaml/opam.git"
build: [
  ["./configure" "--disable-checks" "--prefix" prefix]
  [make "%{name}%.install"]
]
depends: [
  "opam-core" {= "2.0.1"}
  "opam-file-format" {>= "2.0.0~rc2"}
  "jbuilder" {build & >= "1.0+beta18"}
]
available: ocaml-version >= "4.02.3"
