opam-version: "2.0"
version: "2.3.0"
synopsis: "Solver library for opam 2.3"
description: """
Solver and Cudf interaction. This library is based on the Cudf and Dose libraries, and handles calls to the external solver from opam.
"""
maintainer: "opam-devel@lists.ocaml.org"
authors: [
  "David Allsopp <david@tarides.com>"
  "Vincent Bernardoff <vb@luminar.eu.org>"
  "Raja Boujbel <raja.boujbel@ocamlpro.com>"
  "Kate Deplaix <kit-ty-kate@outlook.com>"
  "Roberto Di Cosmo <roberto@dicosmo.org>"
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
  "Fabrice Le Fessant <Fabrice.Le_fessant@inria.fr>"
  "Anil Madhavapeddy <anil@recoil.org>"
  "Guillem Rieu <guillem.rieu@ocamlpro.com>"
  "Ralf Treinen <ralf.treinen@pps.jussieu.fr>"
  "Frederic Tuong <tuong@users.gforge.inria.fr>"
]
homepage: "https://opam.ocaml.org"
bug-reports: "https://github.com/ocaml/opam/issues"
dev-repo: "git+https://github.com/ocaml/opam.git"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
build: [
  ["./configure" "--disable-checks" "--prefix" prefix]
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "opam-format" {= version}
  "mccs" {>= "1.1+17"}
  "dose3" {>= "6.1"}
  "cudf" {>= "0.7"}
  "re" {>= "1.9.0"}
  "dune" {>= "2.8.0"}
  "opam-0install-cudf" {>= "0.5.0"}
]
depopts: [
  "z3"
]
conflicts: [
  "z3" {< "4.8.4"}
]
