(rule
  (targets ocaml-flags-standard.sexp)
  (deps    (:input ocaml-flags-standard.sexp.in) (:script ../shell/subst_var.ml) ../config.status)
  (action (with-stdout-to %{targets} (run ocaml %{script} CONF_OCAMLFLAGS "" %{input}))))

(rule
  (with-stdout-to ocaml-context-flags.sexp (run ocaml %{dep:../shell/context_flags.ml} flags)))
