(rule
  (targets ocaml-flags-configure.sexp)
  (mode    fallback)
  (action  (with-stdout-to %{targets} (echo "()"))))

(rule
  (with-stdout-to ocaml-context-flags.sexp (run ocaml %{dep:../shell/context_flags.ml} flags)))

(rule
  (targets version)
  (deps    ../shell/get_version.ml ../configure.ac)
  (action  (with-stdout-to %{targets} (run ocaml ../shell/get_version.ml ../configure.ac))))
