(executable
  (name        test)
  (public_name opam-crowbar)
  (package     opam-crowbar)
  (modules     opamCrowbar
               opamFilename_crowbar
               opamHash_crowbar
               opamUrl_crowbar
               opamVersion_crowbar
               opamCudf_crowbar
               test)
  (libraries   crowbar opam-core opam-format opam-solver)
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-flags-configure.sexp)
               (:include ../ocaml-context-flags.sexp)))
)
