(library
  (name        opam_format)
  (public_name opam-format)
  (synopsis    "OCaml Package Manager file format handling library")
  ; TODO: Remove (re_export ...) when CI uses the OCaml version that includes https://github.com/ocaml/ocaml/pull/11989
  (libraries   (re_export opam-core) (re_export opam-file-format) re)
  (modules_without_implementation OpamTypes)
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-flags-configure.sexp)
               (:include ../ocaml-context-flags.sexp)))
  (wrapped     false))

(ocamllex opamLineLexer opamInterpLexer)
