(library
  (name        opam_repository)
  (public_name opam-repository)
  (synopsis    "OCaml Package Manager remote repository handling library")
  (libraries   (re_export opam-format))
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-flags-configure.sexp)
               (:include ../ocaml-context-flags.sexp)))
  (wrapped     false))
