(library
  (name        opam_solver)
  (public_name opam-solver)
  (synopsis    "OCaml Package Manager solver interaction library")
  ; TODO: Remove (re_export ...) when CI uses the OCaml version that includes https://github.com/ocaml/ocaml/pull/11989
  (libraries   (re_export opam-format) (re_export cudf) (re_export dose3.common) (re_export dose3.algo) re opam-0install-cudf
               (select opamBuiltinMccs.ml from
                 (mccs -> opamBuiltinMccs.real.ml)
                 (     -> opamBuiltinMccs.dummy.ml))
               (select opamBuiltinZ3.ml from
                 (z3 -> opamBuiltinZ3.real.ml)
                 (   -> opamBuiltinZ3.dummy.ml)))
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-flags-configure.sexp)
               (:include ../ocaml-context-flags.sexp)))
  (wrapped     false))

(rule
  (copy opamCudfSolverSig.ml opamCudfSolverSig.mli))
