(library
  (name        opam_state)
  (public_name opam-state)
  (libraries   opam-repository)
  (synopsis    "OCaml Package Manager instance management library")
  (modules_without_implementation OpamStateTypes)
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-context-flags.sexp)))
  (wrapped     false))

(rule
  (targets opamScript.ml)
  (deps    ../../shell/crunch.ml (glob_files shellscripts/*.*sh))
  (action  (with-stdout-to %{targets} (run ocaml %{deps}))))
