(rule (write-file opam_installer.mli ""))

(executable
  (name        opam_installer)
  (package     opam-installer)
  (public_name opam-installer)
  (modules     opam_installer)
  (libraries   opam-format cmdliner)
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-flags-configure.sexp)
               (:include ../ocaml-context-flags.sexp))))
